<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Constellation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="login">登 录</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">注 册</string>
    <string name="greeting1">开启您的</string>
    <string name="greeting2">星座奇妙之旅</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">MainActivity</string>

</resources>