<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/white_overlay"
                tools:context=".LoginActivity">

    <EditText
            android:id="@+id/editTextPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="number"
            android:lines="1"
            android:imeOptions="actionNext"/>

    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhoneNum"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionNext">

        <requestFocus/>
    </EditText>

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/light_blue_overlay"
            android:minHeight="45dp"
            android:text="@string/login"
            android:textColor="@color/dark_blue2_overlay"
            android:textStyle="bold"
            />

    <TextView
            android:id="@+id/btnForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/forgetPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_blue_overlay"
            android:textSize="12sp"/>

</RelativeLayout>