<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/login_bg"
                tools:context=".MainActivity">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:text="@string/greeting1"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="20dp"
            android:text="@string/greeting2"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:background="@color/gray_overlay"
            android:height="35dp"
            android:width="120dp"
            android:text="@string/register"
            android:textColor="@color/dark_gray_overlay"
            android:textStyle="bold"
            />

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/blue_overlay"
            android:height="35dp"
            android:width="120dp"
            android:text="@string/login"
            android:textColor="@color/dark_blue3_overlay"
            android:textStyle="bold"
            />

</RelativeLayout>
